--- a/01/index.css
+++ b/01/index.css
@@ -9,3 +9,14 @@
 #tx1,#tx2{
   color:red;
 }
+a{
+  text-decoration:none;
+  font-size:28px;
+  font-weight:bold;
+  color:black;
+  line-height:40px;
+}
+ul li{
+  display:block;
+  line-height:40px;
+}
